fixed nav spacing and img sizing on resource pages

--- a/FrontEnd/src/Components/Hamburger/SideNav.css
+++ b/FrontEnd/src/Components/Hamburger/SideNav.css
@@ -1,8 +1,8 @@
 .side_nav {
-  position: fixed;
-  height: 200px;
+  padding-top: 10px;
+  height: 180px;
   background: white;
-  box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
   left: 0;
   width: 50%;
   max-width: 300px;
@@ -10,13 +10,10 @@
 }
 
 .side_nav ul {
-  height: 85px;
-  padding-top: 30px;
   list-style: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 50px;
 }
 
 .side_nav ul li {
