--- a/FrontEnd/src/Components/NavBar/NavBar.css
+++ b/FrontEnd/src/Components/NavBar/NavBar.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway");
 
 .navbar {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
